--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,11 +8,8 @@
   {% include header.html %}
   <div class="content-container">
     <div class="hero-container u-gradient-background">
-      <div class="background-colors">
-        <div></div>
-        <div></div>
+      <div class="maze-container">
       </div>
-      <div class="background-blur"></div>
       <div class="content">
         <label>
           Howdy, we're Shepherd Dog!
@@ -42,7 +39,7 @@
           Our Strengths
         </h2>
         <p>
-          It's hard to boil a company (even a small company like ours) down into three bullets but this layout looks good and we don't want to overwhelm you. In addition to these, you can read about <a href="https://github.com/Shepherd-Dog/Shepherd-Dog/blob/master/values.md">our core values</a> or check out some of <a href="/blog">our favorite blog posts TODO HAVE BLOG POSTS</a>.
+          It's hard to boil a company (even a small company like ours) down into three bullets but this layout looks good and we don't want to overwhelm you. In addition to these, you can read about <a href="https://github.com/Shepherd-Dog/Shepherd-Dog/blob/master/values.md">our core values</a> or check out some of <a href="/blog/favorites">our favorite blog posts</a>.
         </p>
         <ul class="strengths">
           <li>
@@ -52,24 +49,27 @@
               We're a small, focused team. Our size has allowed us to streamline our communication and project management processes. Even though we're small, our track record proves that we can handle everything needed to build and maintain software from initial discovery to final testing.
             </p>
             <p>
-              INSERT WHAT THIS MEANS FOR YOU
+              This means that most of our effort goes directly into building what you need. Plus, what we build will be true to your vision.
             </p>
           </li>
           <li>
             <img src="/media/toolbox.svg" />
             <h3>Flexibility</h3>
             <p>
-              We are technology-neutral, know many programming languages, and have experience with a variety of frameworks. This means we will choose the right tools for your new project based upon your business needs. Or if you have existing tools in place we can quickly jump in and start making an impact.
+              We are technology-neutral, know many programming languages, and have experience with a variety of frameworks.
+            </p>
+            <p>
+              This means we will choose the right tools for your new project based upon your business needs. Or if you have existing tools in place we can quickly jump in and start making an impact.
             </p>
           </li>
           <li>
             <img src="/media/care.svg" />
             <h3>Dedication</h3>
             <p>
-              We have an unfair advantage &mdash; we care more. We don't want to put crap into the world. We know that what we build is a reflection of ourselves and that what we build for your business is a reflection of you. We pour ourselves entirely into a project and treat it as if it were our own. INSERT WHAT THIS MEANS FOR YOU
+              We have an unfair advantage &mdash; we care more. We don't want to put crap into the world. We know that what we build is a reflection of ourselves and that what we build for your business is a reflection of you. We pour ourselves entirely into a project and treat it as if it were our own.
             </p>
             <p>
-              Delivering complicated projects is tough and we care enough to fight through the hard times.
+              This means that we will deliver for you, no matter how complicated and difficult the problem is.
             </p>
           </li>
         </ul>
@@ -80,67 +80,61 @@
     <div class="content">
       <div class="copy-container">
         <h2 class="u-gradient-background">
-          Our Team
+          About Us
         </h2>
         <p>
           We've come a long way since early 2015 when we just wanted to help small businesses with their technology. Through our experience trying everything inside that space we've found what we're good at and passionate about &mdash; building technology tools that help businesses work better.
         </p>
+        <p>
+          Here are the humans under the fluff!
+        </p>
         <ul class="our-team">
           <li>
-            <div class="image-container">
+            <div class="image-container u-gradient-background bio-image">
+              <div class="maze-container">
+              </div>
               <img alt="Picture of Brandy Thomas"
-              src="/media/profile-pics/brandy.jpg"
-              class="bio-image" />
+              src="/media/profile-pics/brandy.png" />
             </div>
             <div class="bio-container">
               <h3>Brandy Thomas</h3>
-              <label>Co-founder</label>
+              <label>Operational Co-founder</label>
               <p>
-                Brandy is the human mind behind Shepherd Dog. Brandy uses her diverse skillset to handle everything from talking with clients to design to detailed and thorough testing.
+                INSERT ONE LINE BIO HERE
               </p>
-              <p>
-                Her experience across job functions and industries and strong analytic mind makes her great at troubleshooting business processes.
-              </p>
-              <p>
-                Brandy analyzes businesses and creates documentation about what needs to be built. At the end she completes the cycle by testing the systems.
-              </p>
+              <a href="/who-we-are/#brandy">Learn more about Brandy</a>
             </div>
           </li>
           <li>
-            <div class="image-container">
+            <div class="image-container u-gradient-background bio-image">
+              <div class="maze-container">
+              </div>
               <img alt="Picture of David Brunow"
-              src="/media/profile-pics/david.jpg"
-              class="bio-image" />
+              src="/media/profile-pics/david.png" />
             </div>
             <div class="bio-container">
               <h3>David Brunow</h3>
-              <label>Co-founder</label>
+              <label>Technical Co-founder</label>
               <p>
-                David is the technical mind behind Shepherd Dog. He uses his strong technical skills to analyze business problems and find the right technical solutions to those problems. He speaks a large number of programming languages and is constantly learning something new.
+                David chooses technologies, architects systems, and writes code in a number of different languages.
               </p>
-              <p>
-                His secret weapon is his background in a variety of different industries before finding his love of code which give him perspective on technical solutions that allows him to balance business needs with technical perfection.
-              </p>
-              <p>
-                David conceptualizes, architects, and builds web and mobile systems.
-              </p>
+              <a href="/who-we-are/#david">Learn more about David</a>
             </div>
           </li>
           <li>
-            <div class="image-container">
+            <div class="image-container u-gradient-background bio-image">
+              <div class="maze-container">
+              </div>
               <img alt="Picture of Danielle Gaither"
-              src="/media/profile-pics/danielle.jpg"
-              class="bio-image" />
+              src="/media/profile-pics/danielle.png" />
             </div>
             <div class="bio-container">
               <h3>Danielle Gaither</h3>
               <label>Developer</label>
               <p>
-                Danielle is an academic who can also get stuff done. She's finishing up her PhD. from the University of North Texas while growing her real-world skills.
+                Developer with one eye on design.
               </p>
-              <p>
-                Danielle has experience building mobile apps and is working on expanding her skillset to the web.
-              </p>
+              <a href="/who-we-are/#danielle">Learn more about Danielle</a>
             </div>
           </li>
         </ul>
@@ -154,32 +148,34 @@
           Testimonials
         </h2>
         <p>
-          When working with clients we're behind the scenes to build things that reflect our client's branding and needs. Because of this we treat our clients and what we do for them with a level of secrecy &mdash; no one needs to know what they are building internally and what we're helping them with.
+          When working with clients we're behind the scenes building things that reflect our client's branding and needs. Because of this we treat our clients and what we do for them with a level of secrecy &mdash; no one needs to know what they are building internally and what we're helping them with.
         </p>
         <p>
           This makes marketing ourselves a little bit difficult because we can't just openly share what we've built with the world. Similarly, we've masked (and pixelated) the identities of our clients that provided testimonials here.
         </p>
-        <ul class="testimonials">
-          <li class="u-gradient-background">
-            <div class="testimonial-container">
-              <p>
-                THANK YOU! You bailed me out a couple of times!
-              </p>
-              <p>
-                I am very proud of the fact that this tool is coming together so smoothly! You guys have done a great job, and I really appreciate the extra support for things like client kick-off calls - its recognized that its above and beyond what a typical development shop would do.
-              </p>
-              <p>
-                Working with you guys has been incredibly smooth! I greatly appreciate your organization and the fact that you guys are self-sufficient to get stuff done on time, and as promised. 😊
-              </p>
-              <cite>&mdash; A Director of Operations</cite>
-            </div>
-            <div class="image-container">
-              <img alt="Image of Testimonial Client"
-              src="/media/testimonial-client-1.png" />
-            </div>
-          </li>
-        </ul>
       </div>
+      <ul class="testimonials">
+        <li class="u-gradient-background">
+          <div class="maze-container">
+          </div>
+          <div class="testimonial-container">
+            <p>
+              THANK YOU! You bailed me out a couple of times!
+            </p>
+            <p>
+              I am very proud of the fact that this tool is coming together so smoothly! You guys have done a great job, and I really appreciate the extra support for things like client kick-off calls - its recognized that its above and beyond what a typical development shop would do.
+            </p>
+            <p>
+              Working with you guys has been incredibly smooth! I greatly appreciate your organization and the fact that you guys are self-sufficient to get stuff done on time, and as promised. 😊
+            </p>
+            <cite>&mdash; A Director of Operations</cite>
+          </div>
+          <div class="image-container">
+            <img alt="Image of Testimonial Client"
+            src="/media/testimonial-client-1.png" />
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="content-container project-estimator">
@@ -192,12 +188,14 @@
           Our bill rate is $124/hour ($62/hour for non-profits) but that number doesn't tell you how much a project will cost. Use our estimator below to get an idea of what different kinds of projects will cost. Estimates generated by the estimator are not binding quotes &mdash; call or email us to get a formal quote.
         </p>
       </div>
-      <a class="button disabled" href="#">Coming Soon</a>
+      <a class="button disabled">Coming Soon</a>
     </div>
   </div>
   <a name="contact-us"></a>
   <div class="content-container call-to-action">
     <div class="content u-gradient-background">
+      <div class="maze-container">
+      </div>
       <div class="copy-container">
         <h2>
           Get in Touch
@@ -209,7 +207,7 @@
           Send us an email so we can schedule a time to show off some things we've built.
         </p>
       </div>
-      <a class="button" href="mailto:howdy@shepherddog.co">Contact Us Now</a>
+      <a class="button" href="mailto:howdy@shep.dog">Contact Us Now</a>
     </div>
   </div>
 </div>
