--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -3,7 +3,6 @@ header#header
 {
     background-color: rgba(250, 250, 250, 1.0);
     border-bottom: 1px solid #AAA;
-    /*box-shadow: 0 1px 8px #AAA;*/
     position: fixed;
     top: 0;
     z-index: 10;
@@ -28,6 +27,9 @@ div.logo
 
 div.logo a
 {
+    align-items: center;
+    display: flex;
+    flex-wrap: nowrap;
     text-decoration: none;
 }
 
@@ -52,16 +54,17 @@ span.logo
 
 div.main-nav-list-container
 {
-    background-color: rgba(201, 122, 71, 0.9); /* a nice orangy color */
+    background-color: rgba(250, 250, 250, 1.0);
+    border-bottom: 1px solid #aaa;
     height: 0;
     left: 0;
     margin-top: 2px;
-    overflow: scroll;
+    overflow: hidden;
     position: absolute;
     text-align: right;
     top: 2.9em;
     visibility: hidden;
-    width: 70%;
+    width: 100%;
     white-space: nowrap;
     z-index: 10;
 }
@@ -76,7 +79,9 @@ nav ul
 
 nav ul li
 {
-    margin-right: 25px;
+    margin-left: 12px;
+    margin-right: 12px;
+    width: 33%;
 }
 
 nav ul li img.text
@@ -89,8 +94,9 @@ nav ul li img.text
 nav ul li a
 , nav ul li a:visited
 {
-    color: white;
+    color: black;
     display: block;
+    text-align: center;
     text-decoration: none;
     vertical-align: bottom;
 }
@@ -107,7 +113,7 @@ nav ul li.active a
 
 div.contact-info-container
 {
-    display: block;
+    display: none;
     position: absolute;
     right: 30px;
     top: 85px;
@@ -135,6 +141,7 @@ div.contact-info-container
 , .contact-info-container-mobile a:visited
 {
     color: rgb(0, 154, 200);
+    cursor: pointer;
     text-decoration: none;
 }
 
@@ -142,20 +149,22 @@ nav .phone-number
 , nav .twitter-container
 , nav .email-container
 {
+    align-items: center;
     background-color: rgba(140, 65, 252, 1.0);
     background-color: hsla(42, 0%, 20%, 1.0);
-    border-radius: 4px;
+    background-color: #888;
+    border: 1px solid #AAA;
+    border-radius: 16px;
     bottom: -15px;
-    box-shadow: 0 1px 4px #101010;
+    /*box-shadow: 0 1px 4px #101010;*/
     color: #FEFEFE;
-    display: inline-block;
+    display: inline-flex;
     font-size: 1.0em;
-    margin-right: 15px;
+    height: 22px;
+    margin-right: 5px;
     padding: 5px 10px;
     position: relative;
 }
-
-
 
 nav .twitter-container a
 , nav .twitter-container a:visited
@@ -165,6 +174,7 @@ nav .twitter-container a
 , nav .phone-number a:visited
 {
     color: #FEFEFE;
+    display: flex;
     text-decoration: none;
 }
 
@@ -182,6 +192,7 @@ nav .twitter-image
     }
 
     header#header
+    , .main-nav-list-container
     {
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
@@ -196,15 +207,26 @@ nav .twitter-image
         backdrop-filter: blur(10px);
         background-color: rgba(140, 65, 252, 1.0);
         background-color: hsla(42, 0%, 20%, 0.6);
+        background-color: #888;
     }
 }
 
-@media only screen and (min-device-width: 600px), only screen and (min-device-width: 325px) and (max-device-width: 600px) and (orientation: landscape) /* targeting iPhone 6 Plus */
+@media only screen and (min-width: 600px)
 {
     .menu-button-container
     , .contact-info-container-mobile
     {
         display: none;
+    }
+
+    div.main-nav-list-container
+    {
+        border: none;
+    }
+
+    div.contact-info-container
+    {
+        display: flex;
     }
 
     div.logo
@@ -229,7 +251,7 @@ nav .twitter-image
 
     nav .logo img.logo.text
     {
-        margin-left: 5px;
+        margin-left: 10px;
         margin-top: 10px;
     }
 
@@ -285,12 +307,11 @@ nav .twitter-image
         background-color: rgba(140, 65, 252, 1.0);
         background-color: hsla(42, 0%, 20%, 0.8);
         background-color: rgba(201, 122, 71, 0.9);
-        border-radius: 4px;
+        background-color: #888;
         bottom: auto;
         color: #FEFEFE;
         font-size: 0.8em;
         left: auto;
-        margin: 0;
         padding: 5px 10px;
         position: relative;
     }
@@ -308,12 +329,11 @@ nav .twitter-image
 
     nav .twitter-image
     {
-        vertical-align: -2px;
         width: 16px;
     }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px)
+@media only screen and (min-width: 600px)
 {
     nav ul li
     {
@@ -321,30 +341,18 @@ nav .twitter-image
     }
 }
 
-@media only screen and (max-width: 600px)
+@media only screen and (min-width: 650px)
 {
     nav ul li
     {
-        font-size: 0.8em;
-        padding-bottom: 6px
+        font-size: 1.0em;
     }
+}
 
-    span.logo
-    , span.logo-text
+@media only screen and (min-width: 768px)
+{
+    nav ul li
     {
-        display: inline-block;
-        height: auto;
-        width: 130px;
-    }
-
-    img.logo.text
-    {
-        margin-left: .20em;
-        margin-top: .20em;
-    }
-
-    span.logo
-    {
-        width: 40px;
+        font-size: 1.0em;
     }
 }
