--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,12 @@
 
 @import "normalize";
 @import "boilerplate";
+@import "images";
+@import "controls";
 @import "navigation";
 @import "body";
 @import "home";
 @import "footer";
 @import "blog";
+@import "who-we-are";
 @import "print";
