--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,8 @@
     <meta name="twitter:image" content="/media/courthouse.png">
   {% endif %}
   <link rel="stylesheet" href="/css/main.css?v={{ site.version }}" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script src="/scripts/shepherd-dog.js?v={{ site.version }}" ></script>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="SHORTCUT ICON" href="/favicon.ico" >
