--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,7 +1,7 @@
 
 footer
 {
-    background-color: rgba(39, 32, 28, 1);
+    background-color: rgba(39, 39, 39, 1);
     color: #EFEFEF;
     font-size: 0.5em;
     padding: 25px 0;
@@ -84,30 +84,21 @@ footer a
 
 @media only screen and (max-width: 600px)
 {
+    footer > div
+    {
+        flex-direction: column;
+        text-align: center;
+    }
+
     footer .columns
     {
-        padding: 10px 10px;
+        padding: 10px 0;
         text-align: center;
         width: 100%;
     }
 
     footer .columns:last-child
-    {
-        text-align: center;
-    }
-}
-
-@media only screen and (max-width: 575px)
-{
-
-    footer .columns
-    {
-        padding: 10px 10px;
-        text-align: center;
-        width: 100%;
-    }
-
-    footer .columns:last-child
+    , footer .columns:first-child
     {
         text-align: center;
     }
