Wrap up (hopefully) final content and design items

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,6 +32,7 @@
       </p>
     </div>
   </div>
+  <div class="border top"></div>
   <div class="content-container strengths">
     <div class="content">
       <div class="copy-container">
@@ -44,12 +45,12 @@
         <ul class="strengths">
           <li>
             <img src="/media/focus.svg" />
-            <h3>Size</h3>
+            <h3>Focus</h3>
             <p>
               We're a small, focused team. Our size has allowed us to streamline our communication and project management processes. Even though we're small, our track record proves that we can handle everything needed to build and maintain software from initial discovery to final testing.
             </p>
             <p>
-              This means that most of our effort goes directly into building what you need. Plus, what we build will be true to your vision.
+              This means that what we build will be true to what your business needs.
             </p>
           </li>
           <li>
@@ -59,23 +60,24 @@
               We are technology-neutral, know many programming languages, and have experience with a variety of frameworks.
             </p>
             <p>
-              This means we will choose the right tools for your new project based upon your business needs. Or if you have existing tools in place we can quickly jump in and start making an impact.
+              This means we will choose the right tools for your new project based upon <strong>your</strong> business needs. Or if you have existing tools in place we can quickly jump in and start making an impact.
             </p>
           </li>
           <li>
             <img src="/media/care.svg" />
-            <h3>Dedication</h3>
+            <h3>Fdedication</h3>
             <p>
               We have an unfair advantage &mdash; we care more. We don't want to put crap into the world. We know that what we build is a reflection of ourselves and that what we build for your business is a reflection of you. We pour ourselves entirely into a project and treat it as if it were our own.
             </p>
             <p>
-              This means that we will deliver for you, no matter how complicated and difficult the problem is.
+              This means that we will deliver what we say we will no matter how complicated and difficult the problem is.
             </p>
           </li>
         </ul>
       </div>
     </div>
   </div>
+  <div class="border bottom"></div>
   <div class="content-container">
     <div class="content">
       <div class="copy-container">
@@ -100,7 +102,7 @@
               <h3>Brandy Thomas</h3>
               <label>Operational Co-founder</label>
               <p>
-                INSERT ONE LINE BIO HERE
+                Jill-of-all-trades with a diverse background and a mixed bag of skills to get the job done.
               </p>
               <a href="/who-we-are/#brandy">Learn more about Brandy</a>
             </div>
@@ -141,6 +143,7 @@
       </div>
     </div>
   </div>
+  <div class="border top"></div>
   <div class="content-container testimonials">
     <div class="content">
       <div class="copy-container">
@@ -148,36 +151,80 @@
           Testimonials
         </h2>
         <p>
-          When working with clients we're behind the scenes building things that reflect our client's branding and needs. Because of this we treat our clients and what we do for them with a level of secrecy &mdash; no one needs to know what they are building internally and what we're helping them with.
+          When working with clients we're behind the scenes building things that reflect our clients' branding and needs. Because of this we treat our clients and what we do for them with a level of confidentiality and integrate what we build with what internal teams build to deliver a seamless final product. You'll never see the Shepherd Dog name lighting up the pixels of one of our clients' applications.
         </p>
         <p>
           This makes marketing ourselves a little bit difficult because we can't just openly share what we've built with the world. Similarly, we've masked (and pixelated) the identities of our clients that provided testimonials here.
         </p>
       </div>
-      <ul class="testimonials">
-        <li class="u-gradient-background">
-          <div class="maze-container">
-          </div>
-          <div class="testimonial-container">
-            <p>
-              THANK YOU! You bailed me out a couple of times!
-            </p>
-            <p>
-              I am very proud of the fact that this tool is coming together so smoothly! You guys have done a great job, and I really appreciate the extra support for things like client kick-off calls - its recognized that its above and beyond what a typical development shop would do.
-            </p>
-            <p>
-              Working with you guys has been incredibly smooth! I greatly appreciate your organization and the fact that you guys are self-sufficient to get stuff done on time, and as promised. 😊
-            </p>
-            <cite>&mdash; A Director of Operations</cite>
-          </div>
-          <div class="image-container">
-            <img alt="Image of Testimonial Client"
-            src="/media/testimonial-client-1.png" />
-          </div>
-        </li>
-      </ul>
+      <div class="testimonial-list-container">
+        <ul class="testimonials">
+          <li class="u-gradient-background">
+            <div class="maze-container">
+            </div>
+            <div class="testimonial-container">
+              <p>
+                THANK YOU! You bailed me out a couple of times!
+              </p>
+              <p>
+                I am very proud of the fact that this tool is coming together so smoothly! You guys have done a great job, and I really appreciate the extra support for things like client kick-off calls - its recognized that its above and beyond what a typical development shop would do.
+              </p>
+              <p>
+                Working with you guys has been incredibly smooth! I greatly appreciate your organization and the fact that you guys are self-sufficient to get stuff done on time, and as promised. 😊
+              </p>
+              <cite>&mdash; A Director of Operations</cite>
+            </div>
+            <div class="image-container">
+              <img alt="Image of Testimonial Client"
+              src="/media/testimonial-client-1.png" />
+            </div>
+          </li>
+          <li class="u-gradient-background">
+            <div class="maze-container">
+            </div>
+            <div class="testimonial-container">
+              <p>
+                Thank you again for all you have both done. We are over the moon with the final product.
+              </p>
+              <cite>&mdash; A Product Owner</cite>
+            </div>
+            <div class="image-container">
+              <img alt="Image of Testimonial Client"
+              src="/media/testimonial-client-2.png" />
+            </div>
+          </li>
+          <li class="u-gradient-background">
+            <div class="maze-container">
+            </div>
+            <div class="testimonial-container">
+              <p>
+                As a small non-profit, we are thrilled that [Shepherd Dog] "remodeled" our website, launched our (amazing) on line store and send out our beautiful monthly newsletter. The work they do for us has increased not only our global visibility, but also our product sales and donations. They’re the best.
+              </p>
+              <cite>&mdash; A Non-Profit Director</cite>
+            </div>
+            <div class="image-container">
+              <img alt="Image of Testimonial Client"
+              src="/media/testimonial-client-3.png" />
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="pager-container">
+        <ul>
+          <li class="selected">
+            1
+          </li>
+          <li>
+            2
+          </li>
+          <li>
+            3
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
+  <div class="border bottom"></div>
   <div class="content-container project-estimator">
     <div class="content">
       <div class="copy-container">
@@ -185,26 +232,26 @@
           Project Estimator
         </h2>
         <p>
-          Our bill rate is $124/hour ($62/hour for non-profits) but that number doesn't tell you how much a project will cost. Use our estimator below to get an idea of what different kinds of projects will cost. Estimates generated by the estimator are not binding quotes &mdash; call or email us to get a formal quote.
+          Our bill rate is $124/hour ($62/hour for non-profits) but that number doesn't tell you how much a project will cost. Use our estimator below to a ballpark estimate of what different kinds of projects will cost. Estimates generated by the estimator are not binding quotes &mdash; call or email us to get a formal quote based upon your specific needs.
         </p>
       </div>
       <a class="button disabled">Coming Soon</a>
     </div>
   </div>
   <a name="contact-us"></a>
-  <div class="content-container call-to-action">
-    <div class="content u-gradient-background">
-      <div class="maze-container">
-      </div>
+  <div class="content-container call-to-action u-gradient-background">
+    <div class="maze-container">
+    </div>
+    <div class="content">
       <div class="copy-container">
         <h2>
           Get in Touch
         </h2>
         <p>
-          Have you found yourself nodding your head with what you've read about us? Or do you need some more convincing?
+          Great &mdash; you've made it this far! Does it sound like we can help your business?
         </p>
         <p>
-          Send us an email so we can schedule a time to show off some things we've built.
+          Send us an email so we can schedule a time to show off some things we've built and to talk about your specific needs.
         </p>
       </div>
       <a class="button" href="mailto:howdy@shep.dog">Contact Us Now</a>
