--- a/_sass/body.scss
+++ b/_sass/body.scss
@@ -4,6 +4,7 @@ body
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 15pt;
     margin: 0 auto;
+    overflow-x: hidden;
     width: 100%;
 }
 
