--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -2,6 +2,7 @@
 footer
 {
     background-color: rgba(39, 39, 39, 1);
+    background-color: #16445A;
     color: #EFEFEF;
     font-size: 0.5em;
     padding: 25px 0;
@@ -57,6 +58,7 @@ footer .columns:last-child
 }
 
 footer a
+, footer a:visited
 {
     color: #EFEFEF;
 }
