--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -33,12 +33,17 @@ h2
 
 .content-container.strengths
 , .content-container.testimonials
-, .content-container.call-to-action
+/*, .content-container.call-to-action*/
 {
 	background-color: #F8F8F8;
+	background-color: rgba(22,68,90,.15);
+	box-shadow: inset 0 1px 10px #777;
+	margin-left: -5%;
+	width: 110%;
 }
 
 .content-container.call-to-action
+, .content-container.project-estimator
 {
 	padding-bottom: 100px;
 	padding-top: 100px;
@@ -92,11 +97,18 @@ ul.strengths li img
 	width: 25%;
 }
 
+div.testimonial-list-container
+{
+	overflow: hidden;
+}
+
 ul.testimonials
 {
 	display: flex;
+	flex-wrap: nowrap;
 	list-style-type: none;
 	padding: 0;
+	width: 300%;
 }
 
 ul.testimonials li
@@ -106,16 +118,56 @@ ul.testimonials li
 	color: white;
 	display: flex;
 	/*margin: 0 10px;*/
+	margin: 10px;
+	min-height: 340px;
+	overflow: hidden;
 	padding: 25px;
 	position: relative;
 	text-align: center;
-	width: 100%;
+	width: 33%;
 }
 
 ul.testimonials li .testimonial-container
 {
 	text-align: left;
 	width: 75%;
+}
+
+.pager-container
+{
+	margin: 0 auto;
+	width: 100px;
+}
+
+.pager-container ul
+{
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	list-style-type: none;
+	padding: 0;
+}
+
+.pager-container li
+{
+	border: 2px solid darkgray;
+	border-radius: 50%;
+	color: darkgray;
+	cursor: pointer;
+	font-size: 11px;
+	font-weight: bold;
+	height: 16px;
+	margin: 0 4px;
+	padding: 0;
+	width: 16px;
+}
+
+.pager-container li.selected
+{
+	background-color: black;
+	border: 1px solid black;
+	color: white;
+	cursor: default;
 }
 
 .testimonial-container cite
@@ -185,9 +237,9 @@ ul.our-team li .image-container.bio-image
 
 .content-container.call-to-action .content
 {
-	background-color: rgb(0, 154, 200);
+	/*background-color: rgb(0, 154, 200);
 	border: 1px solid #aaa;
-	border-radius: 8px;
+	border-radius: 8px;*/
 	color: white;
 	padding: 25px;
 }
@@ -272,61 +324,29 @@ div.background-colors > div:nth-child(even)
 	background-color: blue;
 }
 
+div.border
+{
+	background-repeat: repeat;
+	height: 6px;
+	position: relative;
+	width: 100%;
+}
+
+div.border.bottom
+{
+	background-image: url(/media/triangle-border-white-up.svg);
+	top: -6px;
+}
+
+div.border.top
+{
+	background-image: url(/media/triangle-border-white-down.svg);
+	bottom: -6px;
+	z-index: 1;
+}
+
 .u-gradient-background
 {
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ed2f32+0,7a7ee2+100 */
-	background: #ed2f32; /* Old browsers */
-	background: -moz-linear-gradient(left, #ed2f32 0%, #7a7ee2 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #ed2f32 0%,#7a7ee2 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #ed2f32 0%,#7a7ee2 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ed2f32', endColorstr='#7a7ee2',GradientType=1 ); /* IE6-9 */
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e89a2e+0,79c4e0+100 */
-	background: #e89a2e; /* Old browsers */
-	background: -moz-linear-gradient(left, #e89a2e 0%, #79c4e0 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #e89a2e 0%,#79c4e0 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #e89a2e 0%,#79c4e0 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e89a2e', endColorstr='#79c4e0',GradientType=1 ); /* IE6-9 */
-
-	/* PURPLE TO TEAL(ISH) *?
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#520e75+0,00827d+100 */
-	background: #520e75; /* Old browsers */
-	background: -moz-linear-gradient(left, #520e75 0%, #00827d 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #520e75 0%,#00827d 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #520e75 0%,#00827d 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#520e75', endColorstr='#00827d',GradientType=1 ); /* IE6-9 */
-
-	/* RAINBOW */
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c500fc+0,fc7e00+29,f8fc00+51,04fc00+75,0090ff+100 */
-	background: #c500fc; /* Old browsers */
-	background: -moz-linear-gradient(left, #c500fc 0%, #fc7e00 29%, #f8fc00 51%, #04fc00 75%, #0090ff 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #c500fc 0%,#fc7e00 29%,#f8fc00 51%,#04fc00 75%,#0090ff 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #c500fc 0%,#fc7e00 29%,#f8fc00 51%,#04fc00 75%,#0090ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c500fc', endColorstr='#0090ff',GradientType=1 ); /* IE6-9 */
-
-	/* GREEN TO BLUE */
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#04fc00+0,0090ff+100 */
-	background: #04fc00; /* Old browsers */
-	background: -moz-linear-gradient(left, #04fc00 0%, #0090ff 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #04fc00 0%,#0090ff 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #04fc00 0%,#0090ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#04fc00', endColorstr='#0090ff',GradientType=1 ); /* IE6-9 */
-
-	/* DARKER GREEN TO BLUE */
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#00a005+0,0092cc+100 */
-	background: #00a005; /* Old browsers */
-	background: -moz-linear-gradient(left, #00a005 0%, #0092cc 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #00a005 0%,#0092cc 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #00a005 0%,#0092cc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00a005', endColorstr='#0092cc',GradientType=1 ); /* IE6-9 */
-
-	/* LIGHTEN THE GREEN A LITTLE TO BLUE */
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#5fba53+0,0092cc+100 */
-	background: #5fba53; /* Old browsers */
-	background: -moz-linear-gradient(left, #5fba53 0%, #0092cc 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(left, #5fba53 0%,#0092cc 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to right, #5fba53 0%,#0092cc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5fba53', endColorstr='#0092cc',GradientType=1 ); /* IE6-9 */
-
 	/* MORE BLUE THAN YELLOW IN THE GREEN */
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#52b785+0,0092cc+100 */
 	background: #51b56d; /* Old browsers */
