--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -3,6 +3,7 @@ header#header
 {
     background-color: rgba(250, 250, 250, 1.0);
     border-bottom: 1px solid #AAA;
+    box-shadow: 0 1px 4px #555;
     position: fixed;
     top: 0;
     z-index: 10;
@@ -153,10 +154,11 @@ nav .phone-number
     background-color: rgba(140, 65, 252, 1.0);
     background-color: hsla(42, 0%, 20%, 1.0);
     background-color: #888;
-    border: 1px solid #AAA;
+    background-color: #16445A;
+    border: 1px solid #16445A;
     border-radius: 16px;
     bottom: -15px;
-    /*box-shadow: 0 1px 4px #101010;*/
+    box-shadow: 0 1px 4px #101010;
     color: #FEFEFE;
     display: inline-flex;
     font-size: 1.0em;
@@ -208,6 +210,7 @@ nav .twitter-image
         background-color: rgba(140, 65, 252, 1.0);
         background-color: hsla(42, 0%, 20%, 0.6);
         background-color: #888;
+        background-color: #16445A;
     }
 }
 
@@ -308,6 +311,7 @@ nav .twitter-image
         background-color: hsla(42, 0%, 20%, 0.8);
         background-color: rgba(201, 122, 71, 0.9);
         background-color: #888;
+        background-color: #16445A;
         bottom: auto;
         color: #FEFEFE;
         font-size: 0.8em;
