--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -225,6 +225,7 @@
     </div>
   </div>
   <div class="border bottom"></div>
+  <a name="project-estimator"></a>
   <div class="content-container project-estimator">
     <div class="content">
       <div class="copy-container">
