Create anchor to be able to link directly to the testimonials

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -144,6 +144,7 @@
     </div>
   </div>
   <div class="border top"></div>
+  <a name="testimonials"></a>
   <div class="content-container testimonials">
     <div class="content">
       <div class="copy-container">
