--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -123,6 +123,13 @@ body.blog li.blog a
     text-decoration: none;
 }
 
+article.post
+{
+	margin: 0 auto;
+	max-width: 800px;
+	width: 80%;
+}
+
 @media only screen and (min-width: 600px), only screen and (min-width: 325px) and (max-width: 600px)
 {
     body.blog li.blog a
