--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post content" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
     <div class="byline">
       <div>
