Optimize some images

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@
           Howdy, we're Shepherd Dog!
         </label>
         <div class="hero-image-container">
-          <img class="hero-image" src="/media/courthouse.png" />
+          <img class="hero-image" src="/media/brandy-and-david.png" />
         </div>
       </div>
     </div>
