--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -37,9 +37,9 @@ h2
 {
 	background-color: #F8F8F8;
 	background-color: rgba(22,68,90,.15);
-	box-shadow: inset 0 1px 10px #777;
-	margin-left: -5%;
-	width: 110%;
+	box-shadow: inset 0 11px 8px -10px #777,
+        inset 0px -11px 8px -10px #777;
+	width: 100%;
 }
 
 .content-container.call-to-action
@@ -386,11 +386,6 @@ div.border.top
 	{
 		margin: 0;
 		width: 90%;
-	}
-
-	div.call-to-action > div
-	{
-		width: 85%;
 	}
 }
 
