--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -123,6 +123,11 @@ body.blog li.blog a
     text-decoration: none;
 }
 
+.post.content
+{
+	margin-top: 150px;
+}
+
 @media only screen and (min-width: 600px), only screen and (min-width: 325px) and (max-width: 600px)
 {
     body.blog li.blog a
