--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -2,8 +2,8 @@
 header#header
 {
     background-color: rgba(250, 250, 250, 1.0);
-    border-bottom: 1px solid #AAA;
-    box-shadow: 0 1px 4px #555;
+    /*border-bottom: 1px solid #AAA;*/
+    box-shadow: 0 4px 4px -4px #555;
     position: fixed;
     top: 0;
     z-index: 10;
@@ -56,7 +56,8 @@ span.logo
 div.main-nav-list-container
 {
     background-color: rgba(250, 250, 250, 1.0);
-    border-bottom: 1px solid #aaa;
+    /*border-bottom: 1px solid #aaa;*/
+    box-shadow: 0 4px 4px -4px #555;
     height: 0;
     left: 0;
     margin-top: 2px;
@@ -194,7 +195,7 @@ nav .twitter-image
     }
 
     header#header
-    , .main-nav-list-container
+    , div.main-nav-list-container
     {
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
@@ -225,15 +226,16 @@ nav .twitter-image
     div.main-nav-list-container
     {
         border: none;
+        box-shadow: none;
     }
 
     @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none)
     {
-        .main-nav-list-container
+        div.main-nav-list-container
         {
             -webkit-backdrop-filter: none;
             backdrop-filter: none;
-            background-color: transparent;
+            background-color: rgba(250, 250, 250, 0.6);
         }
     }
 
