--- a/css/main.scss
+++ b/css/main.scss
@@ -11,4 +11,6 @@
 @import "footer";
 @import "blog";
 @import "who-we-are";
+@import "for-your-eyes-only";
+@import "device-hardware";
 @import "print";
